--- a/Prototipo1/Info.plist
+++ b/Prototipo1/Info.plist
@@ -4,7 +4,7 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Bangers-Regular.ttf</string>
+		<string>RubikMonoOne-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
