--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 
 ## User settings
 xcuserdata/
+.DS_Store
+.DS_store
 
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
